--- a/frontend/index.html
+++ b/frontend/index.html
@@ -313,6 +313,9 @@
                         <button @click="activeView = 'scripts'; closeMenu()"
                             class="w-full text-left px-4 py-1.5 hover:bg-gray-100 dark:hover:bg-slate-700 dark:text-white">Shell
                             Scripts</button>
+                        <button @click="activeView = 'smp'; closeMenu()"
+                            class="w-full text-left px-4 py-1.5 hover:bg-gray-100 dark:hover:bg-slate-700 dark:text-white">SMP
+                            Management</button>
                         <button @click="showCounters = !showCounters; closeMenu()"
                             class="w-full text-left px-4 py-1.5 hover:bg-gray-100 dark:hover:bg-slate-700 dark:text-white">
                             <span x-text="showCounters ? 'Hide Counters' : 'Show Counters'"></span>
@@ -1189,6 +1192,121 @@
                                     class="px-4 py-2.5 bg-gray-200 dark:bg-slate-700 hover:bg-gray-300 dark:hover:bg-slate-600 text-gray-700 dark:text-slate-300 rounded font-medium text-sm transition-colors">
                                     Cancel
                                 </button>
+                            </div>
+                        </div>
+
+                        <!-- SMP Management View -->
+                        <div x-show="activeView === 'smp'" class="flex flex-col h-full">
+                            <!-- Header -->
+                            <div class="p-4 border-b border-gray-200 dark:border-slate-700">
+                                <div>
+                                    <h2 class="text-lg font-semibold text-gray-900 dark:text-slate-100">SMP Management
+                                    </h2>
+                                    <p class="text-xs text-gray-500 dark:text-slate-400 mt-0.5">MCU management and FOTA
+                                    </p>
+                                </div>
+                            </div>
+
+                            <!-- Content -->
+                            <div class="flex-1 overflow-y-auto p-4 space-y-4">
+                                <!-- Command Builder -->
+                                <div class="space-y-3">
+                                    <h3 class="text-sm font-semibold text-gray-900 dark:text-slate-100">Send SMP Command
+                                    </h3>
+
+                                    <div>
+                                        <label
+                                            class="block text-xs font-medium text-gray-700 dark:text-slate-300 mb-1">Group
+                                            ID</label>
+                                        <input type="number" x-model="smpGroup" min="0" max="65535"
+                                            class="w-full px-3 py-1.5 bg-white dark:bg-slate-900 border border-gray-300 dark:border-slate-700 rounded text-sm text-gray-900 dark:text-slate-200 focus:ring-1 focus:ring-indigo-500 outline-none"
+                                            placeholder="0">
+                                    </div>
+
+                                    <div>
+                                        <label
+                                            class="block text-xs font-medium text-gray-700 dark:text-slate-300 mb-1">Command
+                                            ID</label>
+                                        <input type="number" x-model="smpCommand" min="0" max="255"
+                                            class="w-full px-3 py-1.5 bg-white dark:bg-slate-900 border border-gray-300 dark:border-slate-700 rounded text-sm text-gray-900 dark:text-slate-200 focus:ring-1 focus:ring-indigo-500 outline-none"
+                                            placeholder="0">
+                                    </div>
+
+                                    <div>
+                                        <label
+                                            class="block text-xs font-medium text-gray-700 dark:text-slate-300 mb-1">Arguments
+                                            (JSON)</label>
+                                        <textarea x-model="smpArgsText" rows="4"
+                                            class="w-full px-3 py-1.5 bg-white dark:bg-slate-900 border border-gray-300 dark:border-slate-700 rounded text-sm text-gray-900 dark:text-slate-200 font-mono focus:ring-1 focus:ring-indigo-500 outline-none resize-none"
+                                            placeholder='{"key": "value"}'></textarea>
+                                    </div>
+
+                                    <button @click="sendSMPCommand()"
+                                        :disabled="!connected || !smpGroup || smpCommand === ''"
+                                        class="w-full py-2 bg-indigo-600 hover:bg-indigo-700 disabled:bg-gray-300 disabled:cursor-not-allowed dark:disabled:bg-slate-700 text-white rounded text-sm font-medium transition-colors">
+                                        Send Command
+                                    </button>
+
+                                    <div x-show="smpResponse"
+                                        class="mt-3 p-3 bg-gray-100 dark:bg-slate-800 rounded text-xs">
+                                        <div class="font-semibold text-gray-700 dark:text-slate-300 mb-1">Response:
+                                        </div>
+                                        <pre class="text-gray-600 dark:text-slate-400 whitespace-pre-wrap"
+                                            x-text="JSON.stringify(smpResponse, null, 2)"></pre>
+                                    </div>
+                                </div>
+
+                                <!-- Firmware Upload -->
+                                <div class="space-y-3 pt-4 border-t border-gray-200 dark:border-slate-700">
+                                    <h3 class="text-sm font-semibold text-gray-900 dark:text-slate-100">Firmware Upload
+                                    </h3>
+
+                                    <div>
+                                        <input type="file" id="firmwareFileInput" accept=".bin,.hex,.img"
+                                            @change="handleFirmwareFileSelect($event)" class="hidden">
+                                        <button @click="document.getElementById('firmwareFileInput').click()"
+                                            class="w-full px-3 py-2 bg-gray-200 dark:bg-slate-700 hover:bg-gray-300 dark:hover:bg-slate-600 text-gray-700 dark:text-slate-300 rounded text-sm font-medium transition-colors">
+                                            Choose Firmware File
+                                        </button>
+                                        <div x-show="firmwareFileName"
+                                            class="mt-2 text-xs text-gray-600 dark:text-slate-400">
+                                            Selected: <span x-text="firmwareFileName"></span>
+                                        </div>
+                                    </div>
+
+                                    <button @click="uploadFirmware()" :disabled="!connected || !firmwareFile"
+                                        class="w-full py-2 bg-emerald-600 hover:bg-emerald-700 disabled:bg-gray-300 disabled:cursor-not-allowed dark:disabled:bg-slate-700 text-white rounded text-sm font-medium transition-colors">
+                                        Upload Firmware
+                                    </button>
+
+                                    <div x-show="firmwareUploadProgress > 0" class="mt-3">
+                                        <div
+                                            class="flex items-center justify-between text-xs text-gray-600 dark:text-slate-400 mb-1">
+                                            <span>Upload Progress</span>
+                                            <span x-text="firmwareUploadProgress + '%'"></span>
+                                        </div>
+                                        <div class="w-full bg-gray-200 dark:bg-slate-700 rounded-full h-2">
+                                            <div class="bg-emerald-600 h-2 rounded-full transition-all duration-300"
+                                                :style="'width: ' + firmwareUploadProgress + '%'"></div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Device Actions -->
+                                <div class="space-y-2 pt-4 border-t border-gray-200 dark:border-slate-700">
+                                    <h3 class="text-sm font-semibold text-gray-900 dark:text-slate-100">Device Actions
+                                    </h3>
+
+                                    <button @click="listFirmwareImages()" :disabled="!connected"
+                                        class="w-full py-2 bg-gray-200 dark:bg-slate-700 hover:bg-gray-300 dark:hover:bg-slate-600 disabled:bg-gray-100 dark:disabled:bg-slate-800 disabled:cursor-not-allowed text-gray-700 dark:text-slate-300 rounded text-sm font-medium transition-colors">
+                                        List Images
+                                    </button>
+
+                                    <button @click="resetDevice()" :disabled="!connected"
+                                        class="w-full py-2 bg-rose-600 hover:bg-rose-700 disabled:bg-gray-300 disabled:cursor-not-allowed dark:disabled:bg-slate-700 text-white rounded text-sm font-medium transition-colors">
+                                        Reset Device
+                                    </button>
+                                </div>
                             </div>
                         </div>
 
